# bbctl

./: .claude.json  .dprint.json  .eslintrc.json  .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  bunfig.toml  package.json  schema.ts  tsconfig.json
docs/: ARCHITECTURE_DESIGN.md  api-readme.md  command-reference.md  configuration-guide.md  deployment-guide.md  index.md  rust-integration.md  user-guide.md  vyos-network-plan.md  vyos-test-lab-setup.md
examples/: validate-instance.ts
scripts/: generateOpenApi.ts
src/: api.rs  app.rs  handler.rs  lib.rs  main.rs  network.rs  ui.rs
src/api/: mod.rs  proxmox.rs  vyos.rs
src/config/: credentials.rs  mod.rs  provider.rs  settings.rs
src/models/: instance.rs  mod.rs  network.rs  provider.rs  volume.rs
src/services/: instance.rs  mod.rs  provider.rs
tests/containers/: Dockerfile  image  mkosi.default  start-vyos-container.sh  vyos-config.boot
tests/vyos-lab/: README.md  cleanup-lab.sh  setup-lab.sh
tests/vyos-lab/scripts/: configure-l3vpn-evpn.sh  configure-wireguard.sh  setup-base.sh  setup-vyos-container.sh
vyos-lab/: ANALYSIS.md  PLAN.md  mkosi.default  mkosi.postinst  setup-network.sh
vyos-lab/configs/: router1-config.yaml  router2-config.yaml  router3-config.yaml
