[package]
name = "bbctl"
version = "0.1.0"
authors = ["Daniel Bodnar <1790726+danielbodnar@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "BitBuilder Cloud CLI for provisioning multi-tenant infrastructure on bare metal servers"

[dependencies]
# UI
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"

# Async runtime
tokio = { version = "1.40.0", features = ["full"] }

# Core functionality
anyhow = "1.0.75"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0"
env_logger = "0.10"
indicatif = "0.17"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"

# API & RPC will be added later

# Networking & Security
uuid = { version = "1.4", features = ["v4", "serde"] }
[dev-dependencies]
assert_cmd = "2.0"
mockito = "1.2"
predicates = "3.0"
tempfile = "3.8"
